# easy_compiler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Tokens.emmx  ast.h  lexer.cpp  lexer.h  log.cpp  log.h  main.cpp  parser.cpp  parser.h  parser.md
inc/: ast.h  lexer.h  parser.h  tools.h
mind_mapping/: Tokens.mmd
src/: lexer.cpp  parser.cpp  tools.cpp
tests/: CMakeLists.txt  test_lexer.cpp  test_parser.cpp
